# regeval

./: CMakeLists.txt  README.md
src/: Regex.h  main.cpp
src/libs/: Colours.cpp  Println.cpp  Println.hpp  main.cpp
